@@ -27,5 +27,6 @@
   \itemize{
     \item Added ncdfSetMissingGenotypes function.
     \item plinkCheck now writes a log file with all mismatches found.
+    \item duplicateDiscordance excludes Y chrom SNPs for females.
   }
 }
